manifest.yaml
# ClusterIP Service (Internal)
apiVersion: v1
kind: Service
metadata:
  name: store-api-service
  namespace: mamad
spec:
  selector:
    app: store-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-api
  namespace: mamad
spec:
  replicas: 2  # Controlled by HPA
  selector:
    matchLabels:
      app: store-api
  template:
    metadata:
      labels:
        app: store-api
    spec:
      containers:
        - name: store-api
          image: wolfix1245/test:1.0
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: shared-storage
              mountPath: /data/share
          resources:
            requests:
              memory: "4000Mi"
              cpu: "2000m"
            limits:
              memory: "8000Mi"
              cpu: "4000m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-storage
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-api-ingress
  namespace: mamad
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: disk-vpss-9ddcd5133c-mamad.apps.ir-central1.arvancaas.ir
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-api-service
                port:
                  number: 80
